--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Requiem of Artifacts</title>
-    <link src="styles.css" rel="stylesheet" type="text/css">
+    <link href="styles.css" rel="stylesheet" type="text/css">
     <script src="script.js"></script>
 </head>
 <body>
-    
+<img src="images/eye1.png" alt="eye" id="eye">
 </body>
 </html>
