--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Requiem of Artifacts</title>
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="styles.css" rel="stylesheet" type="text/css" />
     <script src="script.js" defer></script>
-</head>
-<body>
-<img src="images/eye1.png" alt="eye" id="eye">
-</body>
+  </head>
+  <body>
+    <div id="outsidecontainer">
+      <img src="images/eye1.png" alt="eye" id="eye" />
+    </div>
+  </body>
 </html>
