--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div id="outsidecontainer">
+    <div class="container">
       <img src="images/eye1.png" alt="eye" id="eye" />
     </div>
   </body>
