Eye duplication implemented

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="images/eye1.png" alt="eye" id="eye" />
+      <img src="images/eye1.png" alt="eye" class="eye" />
     </div>
   </body>
 </html>
