Added some background images to be used, started flexboxes.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div class="container">
+    <div class="homeContainer">
+      <img src="images/eye1.png" alt="eye" class="eye" />
+    </div>
+    <div class="mainContainer">
+      <div class="leftEyes">
+        <img src="images/eye1.png" alt="eye" class="eye" />
+        <img src="images/eye1.png" alt="eye" class="eye" />
+      </div>
+      <div class="mainText"></div>
+      <div class="rightEyes">
+        <img src="images/eye1.png" alt="eye" class="eye" />
+        <img src="images/eye1.png" alt="eye" class="eye" />
+      </div>
+    </div>
+    <div class="bottomEyeContainer">
       <img src="images/eye1.png" alt="eye" class="eye" />
     </div>
   </body>
