--- a/index.html
+++ b/index.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Requiem of Artifacts</title>
-    <link href="styles.css" rel="stylesheet" type="text/css" />
-    <script src="script.js" defer></script>
-  </head>
-  <body>
-    <div class="homeContainer">
-      <img src="images/eye1.png" alt="eye" class="eye" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Requiem of Artifacts</title>
+  <link href="styles.css" rel="stylesheet" type="text/css" />
+  <script src="script.js" defer></script>
+</head>
+
+<body>
+  <div class="homeContainer">
+    <img src="images/homeEye.png" alt="eye" class="eye" />
+  </div>
+  <div class="mainContainer">
+    <div class="leftEyes">
+      <img src="images/eye1.png" alt="eye" class="eye" height="150px" width="150px" />
+      <img src="images/eye1.png" alt="eye" class="eye" height="150px" width="150px" />
     </div>
-    <div class="mainContainer">
-      <div class="leftEyes">
-        <img src="images/eye1.png" alt="eye" class="eye" />
-        <img src="images/eye1.png" alt="eye" class="eye" />
-      </div>
-      <div class="mainText"></div>
-      <div class="rightEyes">
-        <img src="images/eye1.png" alt="eye" class="eye" />
-        <img src="images/eye1.png" alt="eye" class="eye" />
-      </div>
+    <div class="mainText">
+      <h1>WELCOME</h1>
+      <h3>Click the eyes to see the past</h3>
     </div>
-    <div class="bottomEyeContainer">
-      <img src="images/eye1.png" alt="eye" class="eye" />
+    <div class="rightEyes">
+      <img src="images/eye1.png" alt="eye" class="eye" height="150px" width="150px" />
+      <img src="images/eye1.png" alt="eye" class="eye" height="150px" width="150px" />
     </div>
-  </body>
+  </div>
+  <div class="bottomEyeContainer">
+    <img src="images/eye1.png" alt="eye" class="eye" height="150px" width="150px" />
+  </div>
+</body>
+
 </html>
