Full site structured, some links and renaming.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="mainContainer">
     <div class="leftEyes">
-      <img src="images/eye1.png" alt="eye" class="eye" height="150px" width="150px" />
+      <a href="workPages\ballpit\ballpit.html"><img src="images/eye1.png" alt="eye" class="eye" height="150px" width="150px" /></a>
       <img src="images/eye1.png" alt="eye" class="eye" height="150px" width="150px" />
     </div>
     <div class="mainText">
