Added linking to each page

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
   </div>
   <div class="mainContainer">
     <div class="leftEyes">
-      <a href="workPages\ballpit\ballpit.html"><img src="images/eye1.png" alt="eye" class="eye" height="150px" width="150px" /></a>
-      <img src="images/eye1.png" alt="eye" class="eye" height="150px" width="150px" />
+      <a href="workPages/ballpit/ballpit.html" class="shrink"><img src="images/ballpiteye.png" alt="eye" class="eye ballpitEye" /></a>
+      <a href="workPages/bedroom/bedroom.html" class="shrink"><img src="images/eye1.png" alt="eye" class="eye" /></a>
     </div>
     <div class="mainText">
       <h1>WELCOME</h1>
       <h3>Click the eyes to see the past</h3>
     </div>
     <div class="rightEyes">
-      <img src="images/eye1.png" alt="eye" class="eye" height="150px" width="150px" />
-      <img src="images/eye1.png" alt="eye" class="eye" height="150px" width="150px" />
+      <a href="workPages/chapel/chapel.html" class="shrink"><img src="images/eye1.png" alt="eye" class="eye"/></a>
+      <a href="workPages/sunset/sunset.html" class="shrink"><img src="images/eye1.png" alt="eye" class="eye"/></a>
     </div>
   </div>
   <div class="bottomEyeContainer">
-    <img src="images/eye1.png" alt="eye" class="eye" height="150px" width="150px" />
+    <a href="workPages/isolation/isolation.html"><img src="images/eye1.png" alt="eye" class="eye"/></a>
   </div>
 </body>
 
