Added some work to ballpit.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   </div>
   <div class="mainContainer">
     <div class="leftEyes">
-      <a href="workPages/ballpit/ballpit.html" class="shrink"><img src="images/ballpiteye.png" alt="eye" class="eye ballpitEye" /></a>
+      <a href="workPages/ballpit/ballpit.html" class="shrink"><img src="images/ballpiteye.png" alt="eye"
+          class="eye ballpitEye" /></a>
       <a href="workPages/bedroom/bedroom.html" class="shrink"><img src="images/eye1.png" alt="eye" class="eye" /></a>
     </div>
     <div class="mainText">
@@ -24,12 +25,12 @@
       <h3>Click the eyes to see the past</h3>
     </div>
     <div class="rightEyes">
-      <a href="workPages/chapel/chapel.html" class="shrink"><img src="images/eye1.png" alt="eye" class="eye"/></a>
-      <a href="workPages/sunset/sunset.html" class="shrink"><img src="images/eye1.png" alt="eye" class="eye"/></a>
+      <a href="workPages/chapel/chapel.html" class="shrink"><img src="images/eye1.png" alt="eye" class="eye" /></a>
+      <a href="workPages/sunset/sunset.html" class="shrink"><img src="images/eye1.png" alt="eye" class="eye" /></a>
     </div>
   </div>
   <div class="bottomEyeContainer">
-    <a href="workPages/isolation/isolation.html"><img src="images/eye1.png" alt="eye" class="eye"/></a>
+    <a href="workPages/isolation/isolation.html"><img src="images/eye1.png" alt="eye" class="eye" /></a>
   </div>
 </body>
 
