--- a/workPages/ballpit/ballpit.html
+++ b/workPages/ballpit/ballpit.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" type="text/css">
     <title>ballpit</title>
 </head>
+
 <body>
-    
+    <a href="../../index.html" class="aImg"> <img src="../../images/homeEye.png" alt="eye" class="eye" /></a>
+    <div class="textContainer">The FitnessGram™ Pacer Test is a multistage aerobic capacity test that progressively gets
+        more difficult as it continues. The 20 meter pacer test will begin in 30 seconds. Line up at the start. The
+        running speed starts slowly, but gets faster each minute after you hear this signal. [beep] A single lap should
+        be completed each time you hear this sound. [ding] Remember to run in a straight line, and run as long as
+        possible. The second time you fail to complete a lap before the sound, your test is over. The test will begin on
+        the word start. On your mark, get ready, start.</div>
 </body>
+
 </html>
