Added and organized all images, added blinking and dilation to homepage, fixed homepage CSS.

--- a/workPages/ballpit/ballpit.html
+++ b/workPages/ballpit/ballpit.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a href="../../index.html" class="aImg"> <img src="../../images/homeEye.png" alt="eye" class="eye" /></a>
+    <a href="../../index.html" class="aImg"> <img src="../../images/homepage/homeEye.png" alt="eye" class="eye" /></a>
     <div class="textContainer">The FitnessGram™ Pacer Test is a multistage aerobic capacity test that progressively gets
         more difficult as it continues. The 20 meter pacer test will begin in 30 seconds. Line up at the start. The
         running speed starts slowly, but gets faster each minute after you hear this signal. [beep] A single lap should
