--- a/index.html
+++ b/index.html
@@ -7,30 +7,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Requiem of Artifacts</title>
   <link href="styles.css" rel="stylesheet" type="text/css" />
-  <script src="script.js" defer></script>
+  <script src="script.js" defer type="application/javascript"></script>
 </head>
 
 <body>
-  <div class="homeContainer">
-    <img src="images/homeEye.png" alt="eye" class="eye" />
-  </div>
-  <div class="mainContainer">
-    <div class="leftEyes">
-      <a href="workPages/ballpit/ballpit.html" class="shrink"><img src="images/ballpiteye.png" alt="eye"
-          class="eye ballpitEye" /></a>
-      <a href="workPages/bedroom/bedroom.html" class="shrink"><img src="images/eye1.png" alt="eye" class="eye" /></a>
+  <div class="pageContainer">
+    <div class="homeContainer">
+      <a href="index.html"><img src="images/homepage/homeeye.png" alt="eye" class="homeEye"
+          style="width:35%;height:35%;" /></a>
     </div>
-    <div class="mainText">
-      <h1>WELCOME</h1>
-      <h3>Click the eyes to see the past</h3>
+    <div class="mainContainer">
+      <div class="leftEyes">
+        <div class="ballpitContainer">
+          <a href="workPages/ballpit/ballpit.html"><img src="images/ballpit/ballpiteye.png" alt="ballpitEye"
+              class="ballpitEye" style="width:100%;height:100%;" /></a>
+        </div>
+        <div class="bedroomContainer">
+          <a href="workPages/bedroom/bedroom.html"><img src="images/bedroom/bedroomeye.png" alt="bedroomEye"
+              class="bedroomEye" style="width:100%;height:100%;" /></a>
+        </div>
+      </div>
+      <div class="mainText">
+        <img src="images/welcome.png" alt="welcome" style="width:50%;height:50%;" />
+        <img src="images/artifact.png" alt="artifact text" style="width:50%;height:50%;" />
+      </div>
+      <div class="rightEyes">
+        <div class="chapelContainer">
+          <a href="workPages/chapel/chapel.html"><img src="images/chapel/chapeleye.png" alt="eye" class="chapelEye"
+              style="width:100%;height:100%;" /></a>
+        </div>
+        <div class="sunsetContainer">
+          <a href="workPages/sunset/sunset.html"><img src="images/sunset/sunseteye.png" alt="eye" class="sunsetEye"
+              style="width:100%;height:100%;" /></a>
+        </div>
+      </div>
     </div>
-    <div class="rightEyes">
-      <a href="workPages/chapel/chapel.html" class="shrink"><img src="images/eye1.png" alt="eye" class="eye" /></a>
-      <a href="workPages/sunset/sunset.html" class="shrink"><img src="images/eye1.png" alt="eye" class="eye" /></a>
+    <div class="bottomEyeContainer">
+      <a href="workPages/isolation/isolation.html"><img src="images/isolation/isolationeye.png" alt="eye"
+          class="isolationEye" style="width:35%;height:35%;" /></a>
     </div>
-  </div>
-  <div class="bottomEyeContainer">
-    <a href="workPages/isolation/isolation.html"><img src="images/eye1.png" alt="eye" class="eye" /></a>
   </div>
 </body>
 
