Hopefully fixed all text to be camelCase

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 <body>
   <div class="pageContainer">
     <div class="homeContainer">
-      <a href="index.html"><img src="images/homepage/homeeye.png" alt="eye" class="homeEye"
-          style="width:35%;height:35%;" /></a>
+      <a href="index.html"><img src="images/homepage/homeEye.png" alt="eye" class="homeEye"
+          style="width:50%;height:50%;" /></a>
     </div>
     <div class="mainContainer">
       <div class="leftEyes">
         <div class="ballpitContainer">
-          <a href="workPages/ballpit/ballpit.html"><img src="images/ballpit/ballpiteye.png" alt="ballpitEye"
-              class="ballpitEye" style="width:100%;height:100%;" /></a>
+          <a href="workPages/ballpit/ballpit.html"><img src="images/ballpit/ballpitEye.png" alt="ballpitEye"
+              class="ballpitEye" style="width:85%;;" /></a>
         </div>
         <div class="bedroomContainer">
-          <a href="workPages/bedroom/bedroom.html"><img src="images/bedroom/bedroomeye.png" alt="bedroomEye"
-              class="bedroomEye" style="width:100%;height:100%;" /></a>
+          <a href="workPages/bedroom/bedroom.html"><img src="images/bedroom/bedroomEye.png" alt="bedroomEye"
+              class="bedroomEye" style="width:85%;;" /></a>
         </div>
       </div>
       <div class="mainText">
@@ -33,18 +33,18 @@
       </div>
       <div class="rightEyes">
         <div class="chapelContainer">
-          <a href="workPages/chapel/chapel.html"><img src="images/chapel/chapeleye.png" alt="eye" class="chapelEye"
-              style="width:100%;height:100%;" /></a>
+          <a href="workPages/chapel/chapel.html"><img src="images/chapel/chapelEye.png" alt="eye" class="chapelEye"
+              style="width:85%;;" /></a>
         </div>
         <div class="sunsetContainer">
-          <a href="workPages/sunset/sunset.html"><img src="images/sunset/sunseteye.png" alt="eye" class="sunsetEye"
-              style="width:100%;height:100%;" /></a>
+          <a href="workPages/sunset/sunset.html"><img src="images/sunset/sunsetEye.png" alt="eye" class="sunsetEye"
+              style="width:85%;;" /></a>
         </div>
       </div>
     </div>
     <div class="bottomEyeContainer">
-      <a href="workPages/isolation/isolation.html"><img src="images/isolation/isolationeye.png" alt="eye"
-          class="isolationEye" style="width:35%;height:35%;" /></a>
+      <a href="workPages/isolation/isolation.html"><img src="images/isolation/isolationEye.png" alt="eye"
+          class="isolationEye" style="width:50%;height:50%;" /></a>
     </div>
   </div>
 </body>
