Added more intelligent sizing for Home and Isolation eyes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="leftEyes">
         <div class="ballpitContainer">
           <a href="workPages/ballpit/ballpit.html"><img src="images/ballpit/ballpitEye.png" alt="ballpitEye"
-              class="ballpitEye" style="width:85%;;" /></a>
+              class="ballpitEye" style="width:85%; height:85%;"/></a>
         </div>
         <div class="bedroomContainer">
           <a href="workPages/bedroom/bedroom.html"><img src="images/bedroom/bedroomEye.png" alt="bedroomEye"
@@ -28,8 +28,8 @@
         </div>
       </div>
       <div class="mainText">
-        <img src="images/welcome.png" alt="welcome" style="width:50%;height:50%;" />
-        <img src="images/artifact.png" alt="artifact text" style="width:50%;height:50%;" />
+        <img src="images/welcome.png" alt="welcome" style="width:60%;height:60%;" />
+        <img src="images/artifact.png" alt="artifact text" style="width:60%;height:60%;" />
       </div>
       <div class="rightEyes">
         <div class="chapelContainer">
