"Templated" all other content paged, finished bedroom.

--- a/workPages/bedroom/bedroom.html
+++ b/workPages/bedroom/bedroom.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>bedroom</title>
+    <script src="../../script.js" defer type="application/javascript"></script>
 </head>
+
 <body>
-    <div class="textContainer">I am an experience. Perceived by others and myself as somewhat strange, sometimes a friendly one, sometimes not so much. I am the experience of my parents meeting by chance through a double blind date. I am all of the people I have met in life and conversed with. I am all of the places I have been, and all of the songs I have listened to. I am a brain, made of gray and white matter, sitting inside a skeleton controlling a nervous system to type this post out right now. I am the topics that I could scream about to the open sky, and I am the late nights spent whispering callouts into my microphone for my team in various inconsequential video games. I am constructed out of jokes, flimsy and fleeting. I am my maternal grandma’s doppelganger, coincidentally looking almost exactly like her and being named after her. I am the middle child, the bookworm. I am the thrill seeker of the family. I’ve leapt from heights where others would falter, and I’ve suffered the consequences of poor decisions. I’m a student, forever learning and seeking more information. I am a lover of all animals, seeking to understand feelings and find new experiences to further enrich my life and theirs. I am a friend, a sibling, an heir. I am American, born and raised in Arizona, though my ancestors hail from England and Northern Europe. I am a future hopeful medical student, hoping to heal others. I am like a prop plane, sometimes needing a push before I can fly on my own. I am the tens of thousands of hugs that I have given and received over my lifetime. These things aren’t just parts of my life, fragments of memories as they may seem, as they’re all parts of me. I am Andrea.</div>
+    <div class="eyeContainer"><a href="../../index.html">
+            <img src="../../images/homepage/homeEye.png" alt="eye" class="homeEye" /></a></div>
+
+    <div class="commentContainer">
+        <h2>Comments</h2>
+        <br />
+        <p>Andrea's comments go here</p>
+    </div>
+
+    <div class="textContainer">
+        <h2>ENGL 109H Introduction: Who I Am</h2>
+        <br />
+        <br />
+        <p>I am an experience. Perceived by others and myself as somewhat strange, sometimes a
+            friendly one, sometimes not so much. I am the experience of my parents meeting by chance through a double
+            blind
+            date. I am all of the people I have met in life and conversed with. I am all of the places I have been, and
+            all
+            of the songs I have listened to. I am a brain, made of gray and white matter, sitting inside a skeleton
+            controlling a nervous system to type this post out right now. I am the topics that I could scream about to
+            the
+            open sky, and I am the late nights spent whispering callouts into my microphone for my team in various
+            inconsequential video games. I am constructed out of jokes, flimsy and fleeting. I am my maternal grandma's
+            doppelganger, coincidentally looking almost exactly like her and being named after her. I am the middle
+            child,
+            the bookworm. I am the thrill seeker of the family. I've leapt from heights where others would falter, and
+            I've
+            suffered the consequences of poor decisions. I'm a student, forever learning and seeking more information. I
+            am
+            a lover of all animals, seeking to understand feelings and find new experiences to further enrich my life
+            and
+            theirs. I am a friend, a sibling, an heir. I am American, born and raised in Arizona, though my ancestors
+            hail
+            from England and Northern Europe. I am a future hopeful medical student, hoping to heal others. I am like a
+            prop
+            plane, sometimes needing a push before I can fly on my own. I am the tens of thousands of hugs that I have
+            given
+            and received over my lifetime. These things aren't just parts of my life, fragments of memories as they may
+            seem, as they're all parts of me. I am Andrea.</p>
+    </div>
 </body>
+
 </html>
