--- a/workPages/isolation/isolation.html
+++ b/workPages/isolation/isolation.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>isolation</title>
 </head>
 <body>
-    
-</body>
+    <div class="eyeContainer"><a href="../../index.html">
+      <img src="../../images/homepage/homeEye.png" alt="eye" class="homeEye"
+    /></a></div>
+
+    <div class="commentContainer">
+      <h2>Comments</h2>
+      <br />
+      <p>Andrea's comments go here</p>
+    </div>
+
+    <div class="textContainer">
+      <h2> </h2>
+      <br />
+      <br />
+      <p>
+       
+      </p>
+    </div>
+  </body>
 </html>
