First final version of the site.

--- a/workPages/bedroom/bedroom.html
+++ b/workPages/bedroom/bedroom.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="textContainer">
-        <h2>ENGL 109H Introduction: Who I Am</h2>
+        <h2>Who I Am - Andrea Linder</h2>
         <br />
         <br />
         <p>I am an experience. Perceived by others and myself as somewhat strange, sometimes a
