--- a/workPages/isolation/isolation.html
+++ b/workPages/isolation/isolation.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>isolation</title>
+    <script src="../../script.js" defer type="application/javascript"></script>
 </head>
 <body>
     <div class="eyeContainer"><a href="../../index.html">
@@ -19,10 +20,13 @@
     </div>
 
     <div class="textContainer">
-      <h2> </h2>
+      <h2>Insomnia and Change - Andrea Linder</h2>
       <br />
       <br />
-      <p>
+      <p>I've long been one to fear the new day. For a long time, before my emotions were more properly balanced by adequate exposure to sunlight and before I was stabilized by antidepressants, I would sit awake at my window. I would stare out of the window, searching for the movements in the corners of my eyes, the hypnagogic hallucinations that roused me every time that I nearly fell into the grasp of slumber. These sights are a cause of anxiety, one that was inevitable given the stressors of school and grades and social requirements of each and every day in middle school. Thankfully, I'm now medicated, but the fear of sleep sometimes still resides with me. Sometimes, I really don't want the new day to come, and that's alright, though I may come to curse myself in the morning for my lack of sleep with deeper circles under my eyes than usual. 
+        This is all to say that stress is a byproduct of life, and specifically the new things, the stressful things, and the scary things, are something humans are programmed to avoid. We don't want to change the routine up, to change the system that is still working, because “if it ain't broken, don't fix it.” Because even if it's a terrible system, one that doesn't even work, we fear that the reality without the system will be worse, because we don't have experience with it and we don't understand it. Just like how we gravitate towards brands we have seen and bought from in the past, we gravitate toward old experiences rather than new ones when we feel stressed. Children are often seen as childish for wanting solely mac and cheese and chicken nuggets at restaurants, but they fear differences because they need routine and they need to feel stable. Adults seem to think they are different, though we all have our own routines and rituals that keep us going, hence why moving, funerals, and marriages are all such stressful, life-changing events. 
+        The reason why America survived is because it had the ability to adapt, to change, to the times. That adaptation has both been used for considerably good and moral causes, but it also has been used to make the rich even richer, and has allowed those at the top to not only stay at the top, but to grow the gap between the middle and upper class to a staggering degree. Since this adaptation is inconvenient now that they have milked the system for what it is worth, it is unlikely that the system will last forever if the people of this country refuse to take a stand against those that take advantage of it. 
+        
        
       </p>
     </div>
