--- a/workPages/sunset/sunset.html
+++ b/workPages/sunset/sunset.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>sunset</title>
+    <script src="../../script.js" defer type="application/javascript"></script>
 </head>
 <body>
     <div class="eyeContainer"><a href="../../index.html">
@@ -19,11 +20,14 @@
     </div>
 
     <div class="textContainer">
-      <h2> </h2>
+      <h2>Consider the Lobster - Andrea Linder</h2>
       <br />
       <br />
       <p>
-       
+        The lobster. A crustacean with character, characterized with flaming red shell and claws like a crab. A delicacy, a rich flavor, and an animal once thought to be worthless due to its fast spoilage and little flavor. It is only when the lobster is at its freshest when it is valued, but to be eaten something must be dying or dead. To die, something must be considered alive, and to be alive, one must be self-sustaining. Such is the way that we humans define life, however strange it may be. A virus is not alive. A corpse is not alive. A lobster is alive. 
+        One of the worst possible ways to die described in recent history is being burned or boiled alive. Whether it be through the brazen bull, a bonfire, or a saucepan, being cooked while still alive is described by survivors as one of the most excruciating experiences known to man. Chickens nowadays suffer a lot of these fates specifically, from boiling alive to being frozen alive. Suffocation is also a very common fear, with drowning being near the top of the list for most people. Pigs are given the honor of this treatment, with one of the most common methods of killing pigs being CO2 chambers. Cows and sheep face the stunner, which honestly sounds like a merciful tool, though its name is relatively far from the truth. The stunner is a piston gun, which shoots in and out when aimed and fired at the frontal lobe of an animal, “Stunning” them so that they don't have as much motor function (so that they don't struggle as much) and so that they supposedly don't feel pain. They still thrash around to the best of their ability though, and of course sometimes the one operating the stunner will miss just the right area and the screams of a cow pierced through the wrong part of the brain will echo through the facility. 
+        Animal slaughter is a field I've been well versed in for a long time, and will continue to learn about. I simply don't understand the justification behind a developed society continuing to eat animals despite the ability to not eat animals. Perhaps it's simply in our nature to be selfish? Maybe it's our way of living to need to consume other things to survive? Our behavior, our nature? I don't understand why flavor is so important to us. I understand that better flavors tend to correlate with better nutritional value. (This isn't to say that sugar is good for you, but that it has a high caloric density, making it a massively efficient food source.) The will to eat can also be equated to our need to breathe, but our pursuit of flavor despite knowing the suffering it can cause will likely forever be one of my unanswerable questions.
+    
       </p>
     </div>
   </body>
