Updated a article title.

--- a/workPages/sunset/sunset.html
+++ b/workPages/sunset/sunset.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="textContainer">
-      <h2>Consider the Lobster - Andrea Linder</h2>
+      <h2>The Soundless Screams of a Species Set for Slaughter - Andrea Linder</h2>
       <br />
       <br />
       <p>
