Added comments to each page, Buffed blinkies.

--- a/workPages/ballpit/ballpit.html
+++ b/workPages/ballpit/ballpit.html
@@ -17,7 +17,8 @@
     <div class="commentContainer">
       <h2>Comments</h2>
       <br />
-      <p>Andrea's comments go here</p>
+      <p>I am a successful person, despite the hardships I have been through. Despite the eating disorder, and despite my brain working a little differently than average, I am successful. I would say that the main reason for my success is my rationality, in my ability to put my future self in good positions so that I don't have to stress about it, and so I'll have a secured future in my grasp. The sugar high of temporary happiness will not lead to success in the long run, and so I must pursue a different kind of happiness, one formed not through short bursts of success, but through climbing the stairway of success, one step at a time, finding my own way to be happy while still on that path. My favorite quote from the semester that I wrote in my notebook is very relevant to this. "I'm on the path, but also kind of not. The only thing holding me back from doing anything is myself." This was in response to a free write started by Dr. Wisland, in which he questioned how we were doing, and if we were where we wanted to be on our paths to the future.
+      </p>
     </div>
 
     <div class="textContainer">
