--- a/workPages/bedroom/bedroom.html
+++ b/workPages/bedroom/bedroom.html
@@ -17,7 +17,7 @@
     <div class="commentContainer">
         <h2>Comments</h2>
         <br />
-        <p>Andrea's comments go here</p>
+        <p>This introduction assignment was the first one of the semester. I spent hours mulling over it, as I wasn't sure how to introduce myself into this honors English class. So, I stuck to what I knew, and wrote a little bit of freeform poetry, since the structure in the rubric for this assignment said we could be creative. I picked out parts of myself that I found significant, the parts that made me unique, and I wrote them all down for the world to see, before composing them into one of my favorite art forms. It was a little nerve wracking, since I didn't know anyone in this class at first, and I feared the rejection of others thinking I was pompous for writing a poem or oversharing on the first assignment. However, this fear was unfounded, as I came to find like minded friends in this class. Though more open-ended assignments like these were sometimes a bit of a hardship, I learned throughout the course how to use my own style to fill in the gaps that the rubrics left in my head. </p>
     </div>
 
     <div class="textContainer">
