--- a/workPages/isolation/isolation.html
+++ b/workPages/isolation/isolation.html
@@ -16,7 +16,7 @@
     <div class="commentContainer">
       <h2>Comments</h2>
       <br />
-      <p>Andrea's comments go here</p>
+      <p>I must understand myself in order to progress forward. I must analyze why I behave the way I do, and why I feel the way I do, in order to avoid paths that I don't want to see myself down and to properly take care of myself. If I choose to ignore my own feelings, that is likely to hurt me in the long term, as shown by past mistakes I've made. But I shouldn't regret these mistakes of the past, as long as I attempt to change my ways and prevent the mistake from happening again. I use this system to take care of myself and change, because despite my fear of change, and the stress it causes, I can rationally see when that change is necessary. One quote from “Insomnia and change” that applies to this is “Because even if it's a terrible system, one that doesn't even work, we fear that the reality without the system will be worse, because we don't have experience with it and we don't understand it.” This quote is in response to how America handles its own problems, and how we tend to look away from them until they rear an ugly head. I criticize the way we go about things a lot, but in this criticism there is a responsibility to embody what I say, and avoid being hypocritical.</p>
     </div>
 
     <div class="textContainer">
