--- a/workPages/sunset/sunset.html
+++ b/workPages/sunset/sunset.html
@@ -16,7 +16,8 @@
     <div class="commentContainer">
       <h2>Comments</h2>
       <br />
-      <p>Andrea's comments go here</p>
+      <p>This was my absolute favorite topic and assignment for the semester. This assignment was on “Consider the Lobster” by David Foster Wallace. Arguing for lobsters is not something I thought I would be doing when I enrolled in this class, but in the end that is absolutely what I ended up doing. This is what I see through my rationale, and what I will continue to see until provided with accurate facts to the contrary. The lobster is proof that others will continue to justify their own rationale despite easily disproved facts being present in their own argument. The lobster is a wonderful example of a life different from our own and yet still similar, and yet those differences justify its devouring in mass quantities. This makes me wonder if people see minorities almost like the lobster, a resource to be used, consumed, and sold as necessary, simply because of the color of their outsides, whether they be the gray-turned-red of the lobster, or the darker skin of Trayvon Martin, referenced in “In Defense of Our Sins.”
+      </p>
     </div>
 
     <div class="textContainer">
